# colav

./: .gitignore  LICENSE  README.md  environment.yml  example.html  extract_data.html  genindex.html  index.html  internal_coordinates.html  objects.inv  ptp1b_paper_results_and_figures.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  strain_analysis.html
.github/workflows/: ci.yml  documentation.yaml
_sources/: example.md.txt  extract_data.md.txt  extract_data.rst.txt  index.md.txt  internal_coordinates.rst.txt  quickstart.md.txt  strain_analysis.md.txt  strain_analysis.rst.txt
colav/: __init__.py  extract_data.py  extract_data_matrix.py  generate_data_matrix.py  icoords.py  internal_coordinates.py  strain_analysis.py
colav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: colav.rst  conf.py  index.md  index.rst  internal_coordinates.md  modules.md
docs/_build/: .buildinfo  genindex.html  icoords.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  icoords.doctree  index.doctree
docs/_build/.doctrees/source/: colav.doctree  modules.doctree
docs/_build/_sources/: icoords.md.txt
docs/_build/_sources/source/: colav.rst.txt
docs/_build/doctrees/: colav.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  colav.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/source/: colav.html  modules.html
docs/source/: index.rst
doctrees/: environment.pickle  extract_data.doctree  index.doctree  internal_coordinates.doctree  strain_analysis.doctree
html/: .buildinfo  extract_data.html  genindex.html  index.html  internal_coordinates.html  objects.inv  search.html  searchindex.js  strain_analysis.html
results/: atom_set.pkl  paper_results_and_figures.ipynb  space_group_dict.pkl
results/ptp1b_data/: filtered-ptp1b.csv  ptp1b_conformation_dict.pkl  ptp1b_sg_dict.pkl
scripts/: atom_set.pkl  atom_set_1nwl.pkl  atom_set_1sug.pkl  dihedral_angle_example.ipynb  filter_rope_output.ipynb  mpro_filter_rope_output.ipynb  pairwise_distance_example.ipynb  ptp1b_filter_rope_output.ipynb  strain_analysis_example.ipynb
tests/: test_colav.py  test_dh_dict.pkl  test_pw_dict.pkl  test_sa_sheart_dict.pkl
