
[project]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "biopandas"
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
# test = ["pytest>=6.0", "pytest-cov"]
docs = [
    "sphinx",
    "myst_parser",
    "sphinx_rtd_theme"
]